objects/items_SharePoint__x.object
<CustomObject>
    <externalDataSource>SharePoint</externalDataSource>
    <externalName>items_SharePoint</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>SalesForceId</externalDeveloperName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SharePoint Documents</relationshipLabel>
        <relationshipName>items_Sharepoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <externalDeveloperName>Author</externalDeveloperName>
        <label>Author</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Info__c</fullName>
        <externalDeveloperName>BAInfo</externalDeveloperName>
        <label>BA Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>SalesForceId</externalDeveloperName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>items_Sharepoint</relationshipLabel>
        <relationshipName>items_Sharepoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <externalDeveloperName>Comment</externalDeveloperName>
        <label>Comment</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentLength__c</fullName>
        <externalDeveloperName>ContentLength</externalDeveloperName>
        <label>ContentLength</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <externalDeveloperName>CreationDate</externalDeveloperName>
        <label>CreationDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>CaseDescription</externalDeveloperName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <externalDeveloperName>DocumentType</externalDeveloperName>
        <label>Document Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadUrl__c</fullName>
        <externalDeveloperName>DownloadUrl</externalDeveloperName>
        <label>DownloadUrl</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsFolder</externalDeveloperName>
        <label>IsFolder</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <externalDeveloperName>DocumentLevel</externalDeveloperName>
        <label>Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MimeType__c</fullName>
        <externalDeveloperName>MimeType</externalDeveloperName>
        <label>MimeType</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>SalesForceId</externalDeveloperName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SharePoint Documents</relationshipLabel>
        <relationshipName>items_Sharepoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>ParentId</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateDate__c</fullName>
        <externalDeveloperName>UpdateDate</externalDeveloperName>
        <label>UpdateDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <externalDeveloperName>UpdatedBy</externalDeveloperName>
        <label>UpdatedBy</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <label>items_SharePoint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>AccountId__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Level__c</columns>
        <columns>BA_Info__c</columns>
        <columns>Description__c</columns>
        <columns>CreationDate__c</columns>
        <columns>CaseId__c</columns>
        <columns>ParentId__c</columns>
        <columns>OpportunityId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsFolder__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <pluralLabel>items_SharePoint</pluralLabel>
</CustomObject>